tests/fail/duplicate_config.txt
error[E0033]: duplicate config statement
 --> /INPUT:2:1
  |
1 | config foo = "a"
  | ---------------- note: previous config statement here
2 | config foo = "b"
  | ^^^^^^^^^^^^^^^^ duplicate config statement
  |
